# BoltPM

./: .gitignore  Cargo.toml  README.md  dev.md  package-lock.json  package.json
.boltpm/plugins/: test_plugin.rs
.boltpm/plugins_output/: postinstall
.github/workflows/: ci.yml
ci/: check_plugin_api.sh
cli/: Cargo.toml  package.json
cli/.boltpm/plugins/: test_plugin.dylib
cli/src/: lockfile.rs  main.rs  plugin.rs  plugin_loader.rs
cli/tests/: basic.rs  plugin_lifecycle.rs  plugin_lifecycle_wasm.rs
cli/tests/fixtures/plugins/: failure.wasm
docs/: CI.md  index.html  plugins.md  script.js  style.css  telemetry.md
docs/architecture/: index.md
docs/cli/: index.md
docs/contributing/: index.md
docs/gui/: index.md
docs/plugins/: authoring.md  index.md  lifecycle.md
docs/registry/: index.md
examples/sample_plugin/src/: lib.rs
gui/: Cargo.toml  package-lock.json  package.json  tauri.conf.json  tauri.conf.toml
gui/src/: main.rs
gui/src-tauri/: Tauri.toml  build.rs  postbuild-cleanup.sh  tauri.conf.json
gui/src/frontend/: index.html  main.js
plugin_api/: Cargo.toml
plugin_api/src/: lib.rs
plugin_api/tests/: basic.rs
plugins/.boltpm/plugins_output/: PLUGIN_TEST
plugins/sample_plugin/: Cargo.toml
plugins/sample_plugin/src/: lib.rs
plugins/sample_plugin/tests/: basic.rs
registry/: Cargo.toml  somepkg-1.0.0.tgz
registry/somepkg/: package.json
registry/src/: main.rs
registry/tests/: basic.rs
scripts/: boltpm_diagnostics.sh  debug_plugin.sh  npm_to_boltpm.js  pnpm_to_boltpm.js  rebuild_all.sh  yarn_to_boltpm.js
test_plugin/: Cargo.toml
test_plugin/src/: lib.rs
test_plugin_fail/: Cargo.toml
test_plugin_fail/src/: lib.rs
test_project/: Cargo.toml  e2e.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm_to_boltpm.js  yarn_to_boltpm.js
test_project/.boltpm/cache/e2eshpkg-1.0.0/: package.tgz
test_project/.boltpm/plugins_output/site-a/: INSTALL_PATH_DEBUG  PLUGIN_TEST
test_project/.boltpm/store/site-a/1.0.0/.boltpm/plugins/: sample_plugin.dylib
test_project/.boltpm/store/utils/1.0.0/: package.json
test_project/apps/site-a/: package.json
test_project/apps/site-a/.boltpm/plugins/: sample_plugin.dylib
test_project/src/: main.rs
test_project/temp_project/.boltpm/cache/e2etestpkg-1.0.0/: package.tgz
test_project/temp_project/.boltpm/plugins_output/: preinstall
tests/: wasm_plugin_test.rs  wasm_plugin_version_check.rs
tests/integration/: per_package_plugin.rs
wasm_plugins/failure/: Cargo.toml
wasm_plugins/failure/src/: lib.rs
wasm_plugins/success/: Cargo.toml
wasm_plugins/success/src/: lib.rs
wasm_plugins/testwasm/: Cargo.toml
wasm_plugins/testwasm/src/: lib.rs
