[package]
name = "boltpm-cli"
version = "0.1.0"
description = "BoltPM CLI: Fast, extensible package manager for JS/TS monorepos."
license = "MIT"
repository = "https://github.com/yourusername/BoltPM"
edition = "2021"

[features]
wasm-support = ["wasmtime", "wasmtime-wasi"]

default = []

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
semver = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
flate2 = "1"
tar = "0.4"
zip = "0.6"
tokio = { version = "1", features = ["full"] }
rayon = "1"
libloading = "0.8"
plugin_api = { path = "../plugin_api" }
urlencoding = "2.1" 
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
wasmtime = { version = "12", optional = true }
wasmtime-wasi = { version = "12", optional = true }
wasmparser = "0.202"
predicates = "3"
sha2 = "0.10"
glob = "0.3"
colored = "2"

[dev-dependencies]
tempfile = "3"
serial_test = "2" 
assert_cmd = "2" 